fixing the align item issue

--- a/src/component/Problem/Problem.css
+++ b/src/component/Problem/Problem.css
@@ -32,7 +32,7 @@
 .problem2_img{
     margin-top: 15rem;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
 }
 .problem2_img img {
     width: 30%;
